--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap');
 
 /* General CSS */
-
+*{
+    transition: all 200ms ease-in;
+}
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 18px;
     line-height: 26px;
     background: #ffffff;
-    color: #4E4D4D;
+    color: #494949;
 }
 
 .container {
@@ -23,7 +25,7 @@ h4,
 h5,
 h6 {
     font-family: 'Open Sans', sans-serif;
-    font-weight: 700;
+    font-weight: 600;
     line-height: 1.2;
 }
 
@@ -89,7 +91,9 @@ header .header-inner .logo {
     max-width: 150px;
     display: inline-block;
 }
-
+header .menu-toggle{
+    display: none;
+}
 .primary-menu ul {
     display: flex;
     list-style-type: none;
@@ -104,7 +108,7 @@ header .header-inner .logo {
     color: #ffffff;
 }
 
-.primary-menu ul li a:hover{
+.primary-menu ul li a:hover {
     font-weight: 600;
     text-decoration: none;
 }
@@ -140,6 +144,8 @@ header .header-inner .logo {
 .what-we-do {
     text-align: center;
     background-color: #f4f4f4;
+    /* background: url('../images/Texture-right-Home-Desktop-Website-GC.png') no-repeat;
+    background-position: right bottom; */
 }
 
 .what-we-do .what-we-do-content {
@@ -148,15 +154,16 @@ header .header-inner .logo {
     position: relative;
     background: #ffffff;
     border-radius: 15px;
-    border: 1px solid #c8c8c8;
+    /* border: 1px solid #c8c8c8; */
     background: #ffffff;
     padding: 50px;
     position: relative;
     top: 150px;
     z-index: 9;
-    box-shadow: 0 0 5px rgba(0, 0, 0, .2);
+    box-shadow: 0 0 5px rgba(0, 0, 0, .3);
 }
-.what-we-do-content .btn-play{
+
+.what-we-do-content .btn-play {
     border: 0;
     background: transparent;
     position: absolute;
@@ -164,22 +171,30 @@ header .header-inner .logo {
     left: -38px;
     transform: translateY(-50%);
     padding: 0;
+    cursor: pointer;
 }
-.what-we-do-content .btn-play:focus{
-    outline:none
+
+.what-we-do-content .btn-play:hover img{
+    transform:scale(1.1);
 }
-.what-we-do-content .btn-play img{
+.what-we-do-content .btn-play:focus {
+    outline: none
+}
+
+.what-we-do-content .btn-play img {
     width: 75px;
     height: 75px;
 }
+
 .what-we-do .what-we-do-content p {
     font-weight: 600;
 }
 
 .how-we-do {
     position: relative;
-    background: #ececec;
+    background-color: #ececec;
     padding: 250px 0;
+  
 }
 
 .how-we-do::before {
@@ -250,6 +265,26 @@ header .header-inner .logo {
     border-color: #ffffff;
 }
 
+.how-does-it-works .work-process {
+    background-color: #ffffff;
+    padding: 50px 20px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, .3);
+    border-radius: 15px;
+    position: relative;
+    z-index: 99;
+    display: none;
+    margin-top: -100px;
+}
+
+.how-does-it-works .work-process img {
+    max-width: 300px;
+    margin: 0 auto;
+}
+
+.how-does-it-works .work-process-list {
+    margin-top: 30px;
+}
+
 .our-partners {
     padding-top: 150px;
 }
@@ -295,6 +330,8 @@ header .header-inner .logo {
     background: url(../images/stats-banner.png) no-repeat center;
     background-size: cover;
     padding: 50px 0 150px;
+    position: relative;
+    z-index: 99;
 }
 
 .company-stats .row .col-md-3:first-child .stats-box,
@@ -307,11 +344,52 @@ header .header-inner .logo {
 }
 
 .company-stats .stats-box img {
-    max-width: 80%;
+    margin-bottom: 15px;
+}
+
+.company-stats .stats-box {
+    font-style: italic;
+    font-weight: 600;
+    color: rgba(255, 255, 225, .8);
+}
+
+.company-stats .stats-box h3 {
+    color: #ffffff;
+    font-weight: 700;
+    margin-bottom: 0;
+}
+
+.company-stats .stats-box p {
+    margin-bottom: 0;
 }
 
 .home-contact {
-    padding: 50px 0;
+    position: relative;
+    margin-top: -150px;
+    padding-top: 200px;
+    padding-bottom: 100px;
+}
+
+.home-contact:after,
+.home-contact::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.home-contact::before {
+    background: url(../images/contact-us-green-texture-parallax-Home-Desktop-Website-GC.png) no-repeat;
+    background-position: left top;
+    background-size: 250px auto;
+}
+
+.home-contact:after {
+    background: url(../images/contact-us-green-texture-parallax-right-Home-Desktop-Website-GC.png) no-repeat;
+    background-position: right bottom;
+    background-size: 350px;
 }
 
 .home-contact .form-wrapper {
@@ -320,6 +398,9 @@ header .header-inner .logo {
     padding: 40px 0 0 40px;
     box-shadow: 0 0 10px rgba(0, 0, 0, .3);
     display: flex;
+    position: relative;
+    z-index: 9999;
+    background: #ffff;
 }
 
 .home-contact .form-wrapper label {
@@ -332,6 +413,10 @@ header .header-inner .logo {
     border-radius: 0;
     padding-left: 0;
     font-size: 20px;
+}
+
+.home-contact .form-wrapper .form-control:focus {
+    outline: none;
 }
 
 .home-contact .form-wrapper .form-left {
@@ -371,6 +456,12 @@ header .header-inner .logo {
     border-bottom: 0;
 }
 
+.home-contact .form-wrapper .form-right .form-control:focus {
+    outline: none;
+}
+.home-contact .form-wrapper .form-right .captcha{
+    display: none;
+}
 .home-contact .form-wrapper .form-right .btn {
     text-transform: uppercase;
     font-size: 20px;
@@ -385,12 +476,20 @@ footer {
     color: #ffffff;
     font-size: 14px;
 }
-footer .container{
+
+footer .container {
     max-width: 1000px;
 }
-footer a{
+
+footer a {
     color: #ffffff;
 }
+
+footer a:hover {
+    color: #ffffff;
+    text-decoration: none;
+}
+
 footer ul {
     list-style-type: none;
     padding: 0;
@@ -411,21 +510,27 @@ footer .footer-top-left .tel {
     font-size: 16px;
     letter-spacing: 2px;
 }
-footer .footer-top-left .tel img{
+
+footer .footer-top-left .tel img {
     margin-right: 10px;
 }
-footer .footer-top-right{
+
+footer .footer-top-right {
     display: flex;
     justify-content: flex-end;
 }
-footer .footer-top-right .footer-menu-box{
-    padding:0 15px;
+
+footer .footer-top-right .footer-menu-box {
+    padding: 0 15px;
 }
-footer .social-media ul{
+
+footer .social-media ul {
     margin-top: 30px;
     display: flex;
     justify-content: flex-end;
+    align-items: center;
 }
-footer .social-media ul li{
+
+footer .social-media ul li {
     margin-right: 10px;
 }
