--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,11 @@ h2.title span:after {
     height: 100%;
     background: #3DA935;
 }
+h2.title + p{
+    font-weight: 600;
+    max-width: 80%;
+    margin:0 auto;
+}
 
 .btn-primary {
     color: #ffffff;
